--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,430 @@
-.App {
+*{
+  box-sizing: border-box;
+}
+/* Header/logo Title */
+.header {
+  padding: 15px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #339cc9;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav {
+    display: flex;
+    background-color: #021f5a;
+    height: 9vh; 
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4em;
+    color: white;
+  }
+  
+  .nav-links{
+    text-align: center;
+  }
+  
+  .nav-links li{
+    display: inline-block;
+    list-style: none;
+    
+  }
+  
+  .nav-links li a{
+    color: white;
+    text-decoration: none;
+    padding-left: 2.6em;
+    padding-right: 0.5em;
+  }
+  /*-----Home page----- */
+  
+.main {   
+  padding-left:4em;
+  padding-right:4em;
+  padding-top:4em;
+  padding-bottom: 4em;
+  background-color: white;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* Fake image, just for this example */
+.fakeimg {
+  width:90vw;
+  height: 58vh;
+  padding: 20px;
+  object-fit:cover;
+}
+/*----Footer------*/
+footer {
+  padding: 2px;
+  text-align: center;
+  background: #ddd;
+}
+/*About US page */
+.row{
+  /* display: flex; */
+   /* flex-direction: row;
+  flex-wrap: wrap; */
+}
+
+.col {
+  float: left ;
+  width: 33.3% ;
+  margin-bottom: 16px;
+  padding: 0 8px;
+ 
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+/* .about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #fbfcfd;
+  color: rgb(161, 10, 10);
+} */
+
+.container {
+  padding: 0 16px;
+}
+
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table !important;
+}
+
+.title {
+  color: rgb(128, 128, 128);
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+.about-title{
+  text-align: center;
+}
+.about-team{
+  width: 100%;
+}
+.about-p{
+  text-align: center;
+}
+.about-m{
+  text-align: center;
+  padding-bottom: 2em;
+}
+/*Contact Us*/
+
+/* Style inputs */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.con-center{
+  text-align: center;
+}
+/*Project section*/
+.row{
+  clear: both;
+}
+.card-product {
+  display: flex;
+  float: left;
+  flex-wrap: wrap;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20% !important;
+  height: 388px;
+  margin-bottom: 16px;
+  padding: 0 2px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+  padding: 1rem;
+}
+.container-product {
+  padding: 2 16px;
+}
+.product-im{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1em;
+  margin-bottom: 2px;
+  width: 140px;
+  height: 150px;
+ object-fit: contain;
+}
+.container-product .pri{
+  font-size: x-large;
+  padding: 2px;
+  font-weight: bolder;
+}
+.container-product .disc{
+  color: #f3182a;
+}
+.container-product .rate{
+  color: #04AA6D;
+}
+
+/* Style the container/project section */
+.container-project {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 5px;
+}
+/* Project cart icon*/
+.product-cart{
+  display: flex;
+  float: right;
+  margin-right: 3em;
+}
+.bag-quantity{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  width: 20px;
+  background-color: #c2e7f7;
+  border-radius: 50%;
+  font-size: 1em;
+  font-weight: 500;
+  color: #000;
+}
+.add-to-cart{
+  border-radius: 5px;
+  margin-top: .5rem;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #339cc9;
+  color: white;
+  height: 40px;
+  width:140px;
+}
+.add-to-cart:disabled{
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #828384;
+  color: white;
+  height: 40px;
+  width: 140px;
+  cursor: not-allowed;
+}
+.buy-now{
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-top: 0.5rem;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #038c53;
+  color: white;
+  height: 40px;
+  width: 140px;
+}
+/* Product View */
+.product-view-img{
+  object-fit:contain;
+}
+.small-img-group{
+  display: flex;
+  justify-content:space-around;
+  margin-top: .5em;
+}
+.small-img-col{
+  flex-basis: 24% ;
+}
+.single-product select{
+  display: block;
+  width: 180px;
+  padding: 5px 10px;
+}
+.single-product input{
+  width: 50px;
+  height: 40px;
+  padding-left: 10px;
+  font-size: 16px;
+  margin-right: 10px;
+}
+.single-product input:focus{
+  outline: none;
+}
+.add-to-cart-btn{
+
+}
+
+/* Shopping cart */
+.yourCartImg{
+  width: 150px;
+  height: 200px;
+}
+.checkoutBTN{
+    border-radius: 5px;
+    margin-top: .5rem;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #339cc9;
+    color: white;
+    height: 40px;
+
+}
+.leftItems{
+  text-align: right;
+}
+.alignLeft{
+  float: right;
+}
+.priceshow{
+  font-size:.9em;
+  text-decoration: line-through;
+  font-weight: bold;
+}
+.priceshow-alignLeft{
+  float: right;
+  font-size:.9em;
+  color: red;
+  font-weight: bold;
+ 
+}
+.URsavings{
+  font-size: 1em;
+  color: #f3182a;
+}
+/* Checkout Page */
+.spaceTop{
+  margin-top: 2.2em;
+}
+.titleBlue{
+  color: #339cc9;
+}
+.check{
+  padding: 8px 100px;
+  color: white;
+  background-color: rgb(55, 54, 54);
+  border: none;
+  border-radius: 2px;
+  margin-bottom: 10px;
+}
+.paybtn{
+ padding-left: 57px;
+ padding-right: 57px;
+  color: #000;
+  background-color: rgb(255, 217, 2);
+  border: none;
+  border-radius: 2px;
+}
+.paybtnImg{
+  width: 80px;
+  height: 42px;
+  object-fit: cover;
+}
+.closebtn{
+  border: none;
+}
+
+/* Login Page*/
+input[type=text], input[type=password] {
+     width: 30% !important;
+     padding: 12px;
+   border: 1px solid #ccc;
+    margin: 6px 0px 16px;
+}
+
+ .blue{
+  margin: 50px 50px;
+  background-color: #339cc9;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+ 
+}
+.headerLog{
+  padding: 25px;
+  text-align: center;
+  color: white;
+}
+.loginBTN{
+  border-radius: 5px;
+    margin-top: .5rem;
+    margin-bottom: 3rem;
+    padding: 5px 50px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color:#021f5a;
+    color: white;
+    height: 40px;
+}
+
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
   }
 }
