--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@ nav {
     padding-left: 2.6em;
     padding-right: 0.5em;
   }
+
+  .btn-logout{
+    cursor: pointer;
+  }
   /*-----Home page----- */
   
 .main {   
@@ -417,6 +421,147 @@ input[type=text], input[type=password] {
     background-color:#021f5a;
     color: white;
     height: 40px;
+}
+/***************Account Section*******************/
+.fakeimg1 {
+  /* padding-left:4em; */
+    width:90vw;
+    height: 28vh;
+    align-items: center;
+    object-fit:cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+}
+.centeredI{
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
+
+.navBar2  a{
+  text-decoration: none;
+  color: rgb(8, 8, 8);
+  font-weight: bold;
+  padding: 1.5em;
+  text-decoration: none;
+  
+}
+.navBar2 a:active, .navBar2 a:hover{
+  color: white;
+}
+
+.navBar2{
+  border: 1px solid rgb(10, 10, 10);
+  background-color:#339cc9;
+  list-style: none;
+  padding: 1.5em;
+  text-align: center;
+
+  /* text-align: center;
+ background-color:#339cc9;
+ color: #000; */
+
+}
+/* profile */
+.wrapper{
+  padding: 30px 50px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  margin: 5px 85px;
+  max-width: 800px;
+}
+h4{
+  letter-spacing: -1px;
+  font-weight: 400;
+}
+.img{
+  width: 70px;
+  height: 70px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+#img-section p,#deactivate p{
+  font-size: 12px;
+  color: #777;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+#img-section b,#img-section button,#deactivate b{
+  font-size: 14px; 
+}
+.sp{
+  margin-left: 6px;
+}
+label{
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 500;
+  color: #777;
+  padding-left: 3px;
+}
+
+.form-control{
+  border-radius: 10px;
+}
+input[type=text], input[type=password] {
+  width: 100% !important;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin: 6px 0px 16px;
+}
+input[placeholder]{
+  font-weight: 500;
+}
+.form-control:focus{
+  box-shadow: none;
+  border: 1.5px solid #0779e4;
+}
+select{
+  display: block;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  height: 40px;
+  padding: 5px 10px;
+  /* -webkit-appearance: none; */
+}
+
+select:focus{
+  outline: none;
+}
+.button{
+  background-color: #fff;
+  color: #0779e4;
+}
+.button:hover{
+  background-color: #0779e4;
+  color: #fff;
+}
+.btn-primary{
+  background-color: #0779e4;
+}
+.danger{
+  background-color: #fff;
+  color: #e20404;
+  border: 1px solid #ddd;
+}
+.danger:hover{
+  background-color: #e20404;
+  color: #fff;
+}
+@media(max-width:576px){
+  .wrapper{
+      padding: 25px 20px;
+  }
+  #deactivate{
+      line-height: 18px;
+  }
 }
 
 
